--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
+    "eslint": "^4.19.1",
     "shelljs": "^0.8.2"
   }
 }
