--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "commander": "^2.15.1",
     "eslint": "^4.19.1",
     "shelljs": "^0.8.2"
+  },
+  "preferGlobal": true,
+  "bin": {
+    "flow": "index.js"
   }
 }
